--- a/amazon.html
+++ b/amazon.html
@@ -52,7 +52,7 @@
     </div>
     
     <div class="main">
-      <div class="products-grid">
+      <div class="products-grid js-products-grid">
         <div class="product-container">
           <div class="product-image-container">
             <img class="product-image"
@@ -74,7 +74,6 @@
           <div class="product-price">
             $10.90
           </div>
-
           <div class="product-quantity-container">
             <select>
               <option selected value="1">1</option>
@@ -201,5 +200,6 @@
         </div>
       </div>
     </div>
+    <script src="scripts/amazon.js"></script>
   </body>
 </html>
